--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "setup": "npm i --include=optional && npm run build:package",
     "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu && npm run build:package",
-    "clean": "nx run-many -t clean --parallel=false && nx reset && git clean -xdf node_modules",
+    "clean": "nx run-many -t clean && nx reset && git clean -xdf node_modules",
     "clean:cache": "rimraf -rf ./node_modules/.cache && rimraf -rf ./.nx/cache",
     "start": "nx run-many --targets=start --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "start:modern": "nx run-many --targets=start-modern --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
@@ -18,7 +18,7 @@
     "build:browser:modern": "nx run-many -t build-browser-modern --parallel=false",
     "build:npm": "nx run-many -t build-npm --parallel=false",
     "build:npm:modern": "nx run-many -t build-npm-modern --parallel=false",
-    "build:package": "nx run-many -t build-package --parallel=false",
+    "build:package": "nx run-many -t build-package",
     "package": "nx run-many -t pack --parallel=false",
     "test": "nx run-many -t test",
     "test:ci": "nx run-many -t test --parallel=false --configuration=ci --runInBand --maxWorkers=1 --forceExit",
@@ -33,6 +33,7 @@
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
     "check:duplicates": "nx run-many -t check:duplicates --parallel=false --verbose",
     "check:security": "npm audit --recursive --audit-level=high",
+    "check:pub": "nx run-many -t check:pub --verbose",
     "format": "prettier --write .",
     "lint:fix": "eslint . --fix",
     "prepare": "husky",
@@ -167,6 +168,7 @@
     "nx": "19.3.0",
     "patch-package": "8.0.0",
     "prettier": "3.3.2",
+    "publint": "0.2.8",
     "rollup": "4.18.0",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
