--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "clean:cache": "rimraf -rf ./node_modules/.cache && rimraf -rf ./.nx/cache",
     "start": "nx run-many --targets=start --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "start:modern": "nx run-many --targets=start-modern --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
-    "build": "nx run-many -t build --parallel=false",
-    "build:browser": "nx run-many -t build-browser --parallel=false",
-    "build:browser:modern": "nx run-many -t build-browser-modern --parallel=false",
-    "build:npm": "nx run-many -t build-npm --parallel=false",
-    "build:npm:modern": "nx run-many -t build-npm-modern --parallel=false",
+    "build": "nx run-many -t build",
+    "build:browser": "nx run-many -t build-browser",
+    "build:browser:modern": "nx run-many -t build-browser-modern",
+    "build:npm": "nx run-many -t build-npm",
+    "build:npm:modern": "nx run-many -t build-npm-modern",
     "build:package": "nx run-many -t build-package",
-    "package": "nx run-many -t pack --parallel=false",
+    "package": "nx run-many -t pack",
     "test": "nx run-many -t test",
-    "test:ci": "nx run-many -t test --parallel=false --configuration=ci --runInBand --maxWorkers=1 --forceExit",
-    "check:lint:ci": "nx run-many -t check:lint:ci --parallel=false --verbose",
-    "check:lint": "nx run-many -t check:lint --parallel=false --verbose",
-    "check:size": "nx run-many -t check:size --parallel=false --verbose",
+    "test:ci": "nx run-many -t test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
+    "check:lint:ci": "nx run-many -t check:lint:ci --verbose",
+    "check:lint": "nx run-many -t check:lint --verbose",
+    "check:size": "nx run-many -t check:size --verbose",
     "check:size:build": "nx run-many -t build-check-size",
     "check:size:json": "npm run check:size:json:ci -- --verbose",
-    "check:size:json:ci": "nx run-many -t check:size:json --parallel=false",
-    "check:circular": "nx run-many -t check:circular --parallel=false --verbose",
+    "check:size:json:ci": "nx run-many -t check:size:json",
+    "check:circular": "nx run-many -t check:circular --verbose",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
-    "check:duplicates": "nx run-many -t check:duplicates --parallel=false --verbose",
+    "check:duplicates": "nx run-many -t check:duplicates --verbose",
     "check:security": "npm audit --recursive --audit-level=high",
     "check:pub": "nx run-many -t check:pub --verbose",
     "format": "prettier --write .",
@@ -41,10 +41,10 @@
     "commit-msg": "commitlint --edit",
     "commit": "git-cz",
     "postinstall": "patch-package",
-    "build:integrations": "nx run-many --targets=build-browser,build-browser-modern --parallel=false --projects=@rudderstack/analytics-js-integrations",
-    "build:v3": "nx run-many -t build --parallel=false --exclude=rudder-sdk-js,@rudderstack/analytics-js-sanity-suite,@rudderstack/analytics-js-integrations",
-    "build:v1.1": "nx run-many -t build --parallel=false --projects=rudder-sdk-js",
-    "build:sanity": "rm -rf packages/sanity-suite/dist && nx run-many --targets=build:all --parallel=false --projects=@rudderstack/analytics-js-sanity-suite",
+    "build:integrations": "nx run-many --targets=build-browser,build-browser-modern --projects=@rudderstack/analytics-js-integrations",
+    "build:v3": "nx run-many -t build --exclude=rudder-sdk-js,@rudderstack/analytics-js-sanity-suite,@rudderstack/analytics-js-integrations",
+    "build:v1.1": "nx run-many -t build --projects=rudder-sdk-js",
+    "build:sanity": "rm -rf packages/sanity-suite/dist && nx run-many --targets=build:all --projects=@rudderstack/analytics-js-sanity-suite",
     "bump-version:monorepo": "npm version minor --git-tag-version false",
     "release": "nx affected --base=origin/main --target=version --parallel=1 --skipCommitTypes=docs,ci,chore,test",
     "release:nx": "nx release --skip-publish --verbose --dry-run",
