--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -17,7 +17,7 @@
     "build:npm:modern": "exit 0",
     "build:package": "exit 0",
     "test": "nx test --maxWorkers=50%",
-    "test:ci": "nx test --parallel=false --configuration=ci --runInBand --maxWorkers=1 --forceExit",
+    "test:ci": "nx test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
     "check:lint": "nx lint",
     "check:lint:ci": "nx lint --configuration=ci",
     "check:circular": "madge --circular --extensions js,ts src || exit 0",
