--- a/packages/analytics-js-cookies/package.json
+++ b/packages/analytics-js-cookies/package.json
@@ -103,8 +103,7 @@
       "Opera >= 43"
     ],
     "modern": [
-      "defaults",
-      "supports es6-module-dynamic-import"
+      "defaults and supports es6-module-dynamic-import"
     ],
     "development": [
       "last 1 chrome version",
