--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -3,7 +3,7 @@
   "version": "3.1.3",
   "private": true,
   "description": "Sanity suite for testing JS SDK package",
-  "main": "./dist/cdn/v3/testBook.js",
+  "main": "./dist/v3/cdn/testBook.js",
   "scripts": {
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf -rf ./reports",
     "start": "npm run build:v1.1 && npm run build:v3 && npm run build:integrations && npm run start:local",
@@ -17,7 +17,7 @@
     "build:npm:modern": "exit 0",
     "build:package": "exit 0",
     "test": "nx test --maxWorkers=50%",
-    "test:ci": "nx test --parallel=false --configuration=ci --runInBand --maxWorkers=1 --forceExit",
+    "test:ci": "nx test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
     "check:lint": "nx lint",
     "check:lint:ci": "nx lint --configuration=ci",
     "check:circular": "madge --circular --extensions js,ts src || exit 0",
