--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -42,7 +42,7 @@ jobs:
         env:
           HUSKY: 0
         run: |
-          source_branch_name=${GITHUB_REF##*/}
+          source_branch_name=${GITHUB_REF#refs/heads/}
           release_type=release
           grep -q "hotfix/" <<< "${GITHUB_REF}" && release_type=hotfix-release
           git fetch origin main
@@ -100,3 +100,27 @@ jobs:
           github_token: ${{ secrets.PAT }}
           pr_title: 'chore(release): pull ${{ steps.create-release.outputs.branch_name }} into main'
           pr_body: ':crown: *An automated PR*'
+
+      - name: Delete hotfix release base branch
+        continue-on-error: true
+        if: startsWith(github.ref_name, 'hotfix/')
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const branchToDelete = '${{ github.ref_name }}';
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
+            const ref = `heads/${branchToDelete}`;
+
+            try {
+              await github.rest.git.deleteRef({
+                owner,
+                repo,
+                ref
+              });
+              console.log(`Branch ${branchToDelete} deleted successfully.`);
+            } catch (error) {
+              console.error(`Error deleting branch ${branchToDelete}:`, error);
+              process.exit(1); // Fail the workflow if branch deletion fails
+            }
+
