chore: ignore coverage for third party code

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,7 +25,7 @@ sonar.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nati
 # Path to tests
 sonar.tests=packages
 sonar.test.inclusions=**/__tests__/**/*
-sonar.test.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg
+sonar.test.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/event
 
 # Coverage config
 sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*
