chore: ignore coverage for third party code in sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,7 +28,7 @@ sonar.test.inclusions=**/__tests__/**/*
 sonar.test.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/event
 
 # Coverage config
-sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*
+sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,**/event
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
