--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.eslint.reportPaths=packages/analytics-js/reports/eslint.json,packages/anal
 # Path to sources
 sonar.sources=packages
 sonar.inclusions=**/src/**/*.js, **/src/**/*.ts
-sonar.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*
+sonar.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,**/event
 
 # Path to tests
 sonar.tests=packages
