fix: page api overloads and sanity suite

--- a/packages/sanity-suite/.env.example
+++ b/packages/sanity-suite/.env.example
@@ -7,7 +7,7 @@ STAGING=false
 # Variables required for the example for v3
 #CDN_VERSION_PATH=v3
 #DEST_SDK_BASE_URL=http://localhost:3005/cdn
-#REMOTE_MODULES_BASE_PATH=http://localhost:3002/cdn/modern/plugins
+#REMOTE_MODULES_BASE_PATH=http://localhost:3002/cdn
 
 # Variables required for the example for v1.1
 #CDN_VERSION_PATH=v1.1
