--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -31,8 +31,10 @@
     "release": "exit 0",
     "start:integrations": "npm run clean && mkdir dist && mkdir dist/local && npm run build:v1.1 && npm run build:integrations && rsync -r ../analytics-js-integrations/dist/cdn/legacy/js-integrations dist/local && npm run start:local",
     "build:start:local:v3": "npm run build:v3 && npm run start:local:v3",
+    "build:start:local:v1.1": "npm run build:v1.1 && npm run start:local:v1.1",
     "start:local": "DEV_SERVER=true npm run build -- --watch",
     "start:local:v3": "DEV_SERVER=true npm run build:local:v3 -- --watch",
+    "start:local:v1.1": "DEV_SERVER=true npm run build:local:v1.1 -- --watch",
     "start:cdn": "DEV_SERVER=true npm run build:cdn -- --watch",
     "start:cdn:v1.1": "DEV_SERVER=true npm run build:cdn:v1.1 -- --watch",
     "start:cdn:v1": "DEV_SERVER=true npm run build:cdn:v1 -- --watch",
