--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,15 +20,15 @@ sonar.eslint.reportPaths=packages/analytics-js/reports/eslint.json,packages/anal
 # Path to sources
 sonar.sources=packages
 sonar.inclusions=**/src/**/*.js, **/src/**/*.ts
-sonar.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,**/event
+sonar.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,packages/analytics-js-plugins/src/errorReporting/event/**/*
 
 # Path to tests
 sonar.tests=packages
 sonar.test.inclusions=**/__tests__/**/*
-sonar.test.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/event
+sonar.test.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,packages/analytics-js-plugins/src/errorReporting/event/**/*
 
 # Coverage config
-sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,**/event
+sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,packages/analytics-js-plugins/src/errorReporting/event/**/*
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
