--- a/nx.json
+++ b/nx.json
@@ -37,27 +37,23 @@
       "inputs": ["default", "^production"],
       "cache": true
     },
-    "build-browser": {
+    "build:modern": {
       "inputs": ["default", "^production"],
       "cache": true
     },
-    "build-browser-modern": {
+    "build:browser": {
       "inputs": ["default", "^production"],
       "cache": true
     },
-    "build-npm": {
+    "build:browser:modern": {
       "inputs": ["default", "^production"],
       "cache": true
     },
-    "build-npm-modern": {
+    "build:package": {
       "inputs": ["default", "^production"],
       "cache": true
     },
-    "build-package": {
-      "inputs": ["default", "^production"],
-      "cache": true
-    },
-    "build-check-size": {
+    "build:package:modern": {
       "inputs": ["default", "^production"],
       "cache": true
     },
@@ -66,7 +62,12 @@
       "cache": true
     },
     "check:size:json": {
-      "inputs": ["default", "^production", "{projectRoot}/.size-limit.js"],
+      "inputs": [
+        "default",
+        "^production",
+        "{projectRoot}/.size-limit.js",
+        "{projectRoot}/.size-limit.mjs"
+      ],
       "cache": true
     },
     "check:pub": {
@@ -95,6 +96,7 @@
       "!{projectRoot}/**/*.txt",
       "!{projectRoot}/serve.json",
       "!{projectRoot}/.size-limit.js",
+      "!{projectRoot}/.size-limit.mjs",
       "!{projectRoot}/.jscpd.json",
       "{workspaceRoot}/tsconfig.build.json",
       "{workspaceRoot}/tsconfig.json",
