--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
     "packages/*"
   ],
   "scripts": {
-    "setup": "npm i --include=optional && npm run build:package",
+    "setup": "npm i --include=optional && npm run build:package:modern",
     "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu && npm run build:package",
     "clean": "nx run-many -t clean && nx reset && git clean -xdf node_modules",
     "clean:cache": "rimraf -rf ./node_modules/.cache && rimraf -rf ./.nx/cache",
     "start": "nx run-many --targets=start --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "start:modern": "nx run-many --targets=start-modern --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "build": "nx run-many -t build",
-    "build:browser": "nx run-many -t build-browser",
-    "build:browser:modern": "nx run-many -t build-browser-modern",
-    "build:npm": "nx run-many -t build-npm",
-    "build:npm:modern": "nx run-many -t build-npm-modern",
-    "build:package": "nx run-many -t build-package",
+    "build:modern": "nx run-many -t build:modern",
+    "build:browser": "nx run-many -t build:browser",
+    "build:browser:modern": "nx run-many -t build:browser:modern",
+    "build:package": "nx run-many -t build:package",
+    "build:package:modern": "nx run-many -t build:package:modern",
     "package": "nx run-many -t pack",
     "test": "nx run-many -t test",
     "test:ci": "nx run-many -t test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
     "check:lint:ci": "nx run-many -t check:lint:ci --verbose",
     "check:lint": "nx run-many -t check:lint --verbose",
     "check:size": "nx run-many -t check:size --verbose",
-    "check:size:build": "nx run-many -t build-check-size",
+    "check:size:build": "nx run-many -t check:size:build",
     "check:size:json": "npm run check:size:json:ci -- --verbose",
     "check:size:json:ci": "nx run-many -t check:size:json",
     "check:circular": "nx run-many -t check:circular --verbose",
@@ -41,7 +41,7 @@
     "commit-msg": "commitlint --edit",
     "commit": "git-cz",
     "postinstall": "patch-package",
-    "build:integrations": "nx run-many --targets=build-browser,build-browser-modern --projects=@rudderstack/analytics-js-integrations",
+    "build:integrations": "nx run-many --targets=build:browser,build:browser:modern --projects=@rudderstack/analytics-js-integrations",
     "build:v3": "nx run-many -t build --exclude=rudder-sdk-js,@rudderstack/analytics-js-sanity-suite,@rudderstack/analytics-js-integrations",
     "build:v1.1": "nx run-many -t build --projects=rudder-sdk-js",
     "build:sanity": "rm -rf packages/sanity-suite/dist && nx run-many --targets=build:all --projects=@rudderstack/analytics-js-sanity-suite",
