--- a/packages/analytics-js-cookies/tsconfig.spec.json
+++ b/packages/analytics-js-cookies/tsconfig.spec.json
@@ -19,6 +19,7 @@
     "__fixtures__/**/*.ts",
     "src/**/*.ts",
     "src/**/*.d.ts",
+    "../../types/**/*",
     "./package.json",
     "../analytics-js-common/src/**/*"
   ]
