--- a/packages/analytics-js-integrations/package.json
+++ b/packages/analytics-js-integrations/package.json
@@ -51,17 +51,19 @@
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf -rf ./reports",
     "start": "npm run build && npm run serve",
     "start:modern": "npm run build:modern && npm run serve",
-    "build": "npm run build:browser",
-    "build:browser:modern": "npm run build:integration:all:modern",
+    "build": "npm run build:browser && npm run build:package",
+    "build:modern": "npm run build:browser:modern && npm run build:package:modern",
     "build:browser": "npm run build:integration:all",
+    "build:browser:modern": "npm run build:integration:all:modern",
     "build:npm": "exit 0",
     "build:npm:modern": "exit 0",
     "build:package": "exit 0",
+    "build:package:modern": "exit 0",
     "test": "nx test --maxWorkers=50%",
     "test:ci": "nx test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
     "check:lint": "nx lint",
     "check:lint:ci": "nx lint --configuration=ci",
-    "check:size:build": "npm run build",
+    "check:size:build": "npm run build:browser && npm run build:browser:modern && npm run build:package && npm run build:package:modern",
     "check:size": "npm run check:size:build && size-limit",
     "check:size:json": "size-limit --json",
     "check:circular": "madge --circular --extensions js,ts src || exit 0",
@@ -69,7 +71,6 @@
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
     "check:duplicates": "jscpd src",
     "check:security": "npm audit --recursive --audit-level=high",
-    "build:modern": "npm run build:browser:modern",
     "serve": "npx serve ./dist -p 3005 --cors",
     "package": "exit 0",
     "release": "exit 0",
