--- a/packages/loading-scripts/package.json
+++ b/packages/loading-scripts/package.json
@@ -23,19 +23,25 @@
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf -rf ./reports",
     "start": "rollup -c --watch --environment DEV_SERVER",
     "build": "npm run build:browser",
+    "build:original": "npm run build:browser:original",
+    "build:modern": "npm run build:browser:modern",
     "build:browser:modern": "exit 0",
-    "build:browser:minified": "rollup -c --environment VERSION:$npm_package_version,UGLIFY",
-    "build:browser": "rollup -c --environment VERSION:$npm_package_version && npm run build:browser:minified",
+    "build:browser:original": "rollup -c --environment VERSION:$npm_package_version",
+    "build:browser": "rollup -c --environment VERSION:$npm_package_version,UGLIFY",
+    "build:package": "exit 0",
+    "build:package:modern": "exit 0",
     "test": "nx test --maxWorkers=50%",
     "test:ci": "nx test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
     "check:lint": "nx lint",
     "check:lint:ci": "nx lint --configuration=ci",
+    "check:size:build": "npm run build:browser && npm run build:browser:modern && npm run build:package && npm run build:package:modern",
+    "check:size": "npm run check:size:build && size-limit",
+    "check:size:json": "size-limit --json",
     "check:circular": "madge --circular --extensions js,ts src || exit 0",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "exit 0",
     "check:duplicates": "jscpd src",
-    "check:security": "npm audit --recursive --audit-level=high",
-    "build:modern": "npm run build:browser:modern"
+    "check:security": "npm audit --recursive --audit-level=high"
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*"
