--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -16,6 +16,7 @@
     "build:npm": "rollup -c --environment DISTRIBUTION_TYPE:npm",
     "build:npm:modern": "exit 0",
     "build:package": "exit 0",
+    "build:package:modern": "exit 0",
     "test": "nx test --maxWorkers=50%",
     "test:ci": "nx test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
     "check:lint": "nx lint",
