--- a/packages/analytics-js-service-worker/package.json
+++ b/packages/analytics-js-service-worker/package.json
@@ -2,8 +2,8 @@
   "name": "@rudderstack/analytics-js-service-worker",
   "version": "3.1.4",
   "description": "RudderStack JavaScript Service Worker SDK",
-  "main": "dist/npm/cjs/index.cjs",
-  "module": "dist/npm/esm/index.mjs",
+  "main": "dist/npm/modern/cjs/index.cjs",
+  "module": "dist/npm/modern/esm/index.mjs",
   "type": "module",
   "exports": {
     ".": {
