--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "build:package:modern": "nx run-many -t build:package:modern",
     "package": "nx run-many -t package",
     "test": "nx run-many -t test",
+    "test:pre-commit:affected": "nx affected -t test --base=HEAD",
     "test:ci": "nx run-many -t test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
     "check:lint:ci": "nx run-many -t check:lint:ci --verbose",
     "check:lint": "nx run-many -t check:lint --verbose",
     "check:size": "nx run-many -t check:size --verbose",
     "check:size:build": "nx run-many -t check:size:build",
+    "check:size:build:pre-commit:affected": "nx affected -t check:size:build --base=HEAD",
     "check:size:json": "npm run check:size:json:ci -- --verbose",
+    "check:size:json:pre-commit:affected": "nx affected -t check:size:json --base=HEAD --verbose",
     "check:size:json:ci": "nx run-many -t check:size:json",
     "check:circular": "nx run-many -t check:circular --verbose",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
@@ -37,7 +40,7 @@
     "format": "prettier --write .",
     "lint:fix": "eslint . --fix",
     "prepare": "husky",
-    "pre-commit": "npm run test && npm run check:size:build && npm run check:size:json && npx lint-staged",
+    "pre-commit": "npm run test:pre-commit:affected && npm run check:size:build:pre-commit:affected && npm run check:size:json:pre-commit:affected && npx lint-staged",
     "commit-msg": "commitlint --edit",
     "commit": "git-cz",
     "postinstall": "patch-package",
