--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "start": "nx run-many --targets=start --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "start:modern": "nx run-many --targets=start-modern --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "build": "nx run-many -t build",
+    "build:ci": "nx affected -t build --base=$BASE_REF",
     "build:modern": "nx run-many -t build:modern",
+    "build:modern:ci": "nx affected -t build:modern --base=$BASE_REF",
     "build:browser": "nx run-many -t build:browser",
     "build:browser:modern": "nx run-many -t build:browser:modern",
     "build:package": "nx run-many -t build:package",
@@ -22,21 +24,23 @@
     "package": "nx run-many -t package",
     "test": "nx run-many -t test",
     "test:pre-commit:affected": "nx affected -t test --base=HEAD",
-    "test:ci": "nx run-many -t test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
-    "check:lint:ci": "nx run-many -t check:lint:ci --verbose",
+    "test:ci": "nx affected -t test --base=$BASE_REF --configuration=ci --runInBand --maxWorkers=1 --forceExit",
+    "check:lint:ci": "nx affected -t check:lint:ci --base=$BASE_REF --verbose",
     "check:lint": "nx run-many -t check:lint --verbose",
     "check:size": "nx run-many -t check:size --verbose",
     "check:size:build": "nx run-many -t check:size:build",
+    "check:size:build:ci": "nx affected -t check:size:build --base=$BASE_REF",
     "check:size:build:pre-commit:affected": "nx affected -t check:size:build --base=HEAD",
     "check:size:json": "npm run check:size:json:ci -- --verbose",
     "check:size:json:pre-commit:affected": "nx affected -t check:size:json --base=HEAD --verbose",
-    "check:size:json:ci": "nx run-many -t check:size:json",
+    "check:size:json:ci": "nx affected -t check:size:json --base=$BASE_REF",
     "check:circular": "nx run-many -t check:circular --verbose",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
     "check:duplicates": "nx run-many -t check:duplicates --verbose",
     "check:security": "npm audit --recursive --audit-level=high",
     "check:pub": "nx run-many -t check:pub --verbose",
+    "check:pub:ci": "nx affected -t check:pub --verbose --base=$BASE_REF",
     "format": "prettier --write .",
     "lint:fix": "eslint . --fix",
     "prepare": "husky",
