--- a/.github/workflows/unit-tests-and-lint.yml
+++ b/.github/workflows/unit-tests-and-lint.yml
@@ -35,6 +35,8 @@ jobs:
           npm run setup:ci
 
       - name: Execute unit tests
+        env:
+          BASE_REF: ${{ github.event.pull_request.base.ref || 'HEAD' }}
         run: |
           npm run test:ci
 
@@ -46,6 +48,8 @@ jobs:
           files: ./packages/analytics-js/reports/coverage/clover.xml,./packages/analytics-js-common/reports/coverage/clover.xml,./packages/analytics-js-integrations/reports/coverage/clover.xml,./packages/analytics-js-plugins/reports/coverage/clover.xml,./packages/analytics-js-service-worker/reports/coverage/clover.xml,./packages/analytics-v1.1/reports/coverage/clover.xml,./packages/analytics-js-cookies/reports/coverage/clover.xml
 
       - name: Execute linting check
+        env:
+          BASE_REF: ${{ github.event.pull_request.base.ref || 'HEAD' }}
         run: |
           npm run check:lint:ci
 
