--- a/.github/workflows/unit-tests-and-lint.yml
+++ b/.github/workflows/unit-tests-and-lint.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Execute unit tests
         env:
-          BASE_REF: ${{ github.event.pull_request.base.ref || 'HEAD' }}
+          BASE_REF: ${{ github.event.pull_request.base.sha || 'HEAD' }}
         run: |
           npm run test:ci
 
@@ -49,7 +49,7 @@ jobs:
 
       - name: Execute linting check
         env:
-          BASE_REF: ${{ github.event.pull_request.base.ref || 'HEAD' }}
+          BASE_REF: ${{ github.event.pull_request.base.sha || 'HEAD' }}
         run: |
           npm run check:lint:ci
 
